--- a/index.html
+++ b/index.html
@@ -2,9 +2,14 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/apple-logo.ico" />
+    <!--Fonts Releway Google-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500;600;700;800&display=swap" rel="stylesheet">
+    <!--Logo Windows-->
+    <link rel="icon" type="image/svg+xml" href="./src/assets/apple-logo.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Apple E-Commerce</title>
+    <title>Apple Tienda Online</title>
   </head>
   <body>
     <div id="root"></div>
