creo un componente independiente donde estara el ItemCharger, corregi varios errores de diseño y optice codigo en algunos componentes, agrego un contador de cantidad junto al CartWidget, agrego iconos bootstrap a Item y ItemDetail, mejoro la funcionalidad del ItemCounty CartContainer

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!--Logo Windows-->
     <link rel="icon" type="image/svg+xml" href="./src/assets/apple-logo.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Apple Tienda Online</title>
+    <title>Galaxi Store</title>
   </head>
   <body>
     <div id="root"></div>
